test/cgip/PP/error/inheritance/rep/reperr-22.javaerr
Type error in test case:
rep-22.arg, l. 32, c. 16:
  Error : C`m is not defined in scope
